# indian-puja-calendar

./: .gitignore  AGENTS.md  README.md  improvement_phase_1.md  improvement_phase_2.md  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/calc/: __init__.py  engine.py  festivals.py  muhurta.py  panchanga.py  times.py  vendored_panchanga.py
app/routes/: calendar.py  daily.py
app/views/: daily.py  monthly.py
static/: style.css
templates/: base.html  calendar.html  today.html
